<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.PasserUneCommande">

    <ListView
        android:id="@+id/factureListView"
        android:layout_width="match_parent"
        android:layout_height="425dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="143dp"
        android:layout_marginTop="11dp"
        android:text="@string/votre_commande" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="62dp"
        android:text="@string/item" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="233dp"
        android:layout_marginTop="63dp"
        android:text="@string/quantite" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="334dp"
        android:layout_marginTop="62dp"
        android:text="@string/prix" />

    <Button
        android:id="@+id/finalOrderButton"
        android:layout_width="186dp"
        android:layout_height="93dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:onClick="onFinalOrderButtonClicked"
        android:layout_marginStart="193dp"
        android:layout_marginBottom="41dp"
        android:text="@string/passer_la_commande" />

    <Button
        android:id="@+id/CancelOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:onClick="onCancelOrderButton"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="49dp"
        android:layout_marginBottom="64dp"
        android:text="Annuler" />

</RelativeLayout>